// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioPane component renders expanded with children 1`] = `
<div>
  <div
    class="RadioPane-radioPaneContainer-48"
  >
    <label
      class="RadioPane-root-47"
    >
      <input
        class="RadioPane-input-55"
        name="f1"
        type="radio"
        value="v1"
      />
      <div
        aria-disabled="false"
        class="MuiButtonBase-root RadioPane-pane-56"
        role="button"
        tabindex="-1"
      >
        <div
          class="RadioPane-header-58"
        >
          <h6
            class="MuiTypography-root RadioPane-title-59 Typography-root-62 MuiTypography-h6"
            data-testid="typography"
          >
            Value 1
          </h6>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root RadioPane-checkedIcon-57"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </div>
        <div
          class="RadioPane-content-60"
        >
          <hr
            class="MuiDivider-root RadioPane-hr-61"
          />
          expanded content
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioPane component renders with className 1`] = `
<div>
  <div
    class="RadioPane-radioPaneContainer-25"
  >
    <label
      class="RadioPane-root-24 custom-classname"
    >
      <input
        class="RadioPane-input-32"
        name="f1"
        type="radio"
        value="v1"
      />
      <div
        aria-disabled="false"
        class="MuiButtonBase-root RadioPane-pane-33"
        role="button"
        tabindex="-1"
      >
        <div
          class="RadioPane-header-35"
        >
          <h6
            class="MuiTypography-root RadioPane-title-36 Typography-root-39 MuiTypography-h6"
            data-testid="typography"
          >
            Value 1
          </h6>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root RadioPane-checkedIcon-34"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioPane component renders with collapse feature 1`] = `
<div>
  <div
    class="RadioPane-radioPaneContainer-71 RadioPane-collapseFeature-77"
  >
    <label
      class="RadioPane-root-70"
    >
      <input
        class="RadioPane-input-78"
        name="f1"
        type="radio"
        value="v1"
      />
      <div
        aria-disabled="false"
        class="MuiButtonBase-root RadioPane-pane-79"
        role="button"
        tabindex="-1"
      >
        <div
          class="RadioPane-header-81"
        >
          <h6
            class="MuiTypography-root RadioPane-title-82 Typography-root-85 MuiTypography-h6"
            data-testid="typography"
          >
            Value 1
          </h6>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root RadioPane-checkedIcon-80"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </div>
        <div
          class="RadioPane-descriptionContainer-72"
          style="height: 0px;"
        >
          <div
            class="RadioPane-content-83"
            data-testid="expanded"
          >
            <hr
              class="MuiDivider-root RadioPane-hr-84"
            />
            expanded content
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
    <div
      class="RadioPane-btnContainer-73"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root RadioPane-iconBtn-74"
        data-testid="radio-pane-icon-button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root RadioPane-cancelIcon-76"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`RadioPane component renders with collapse feature withoud description 1`] = `
<div>
  <div
    class="RadioPane-radioPaneContainer-94 RadioPane-collapseFeature-100"
  >
    <label
      class="RadioPane-root-93"
    >
      <input
        class="RadioPane-input-101"
        name="f1"
        type="radio"
        value="v1"
      />
      <div
        aria-disabled="false"
        class="MuiButtonBase-root RadioPane-pane-102"
        role="button"
        tabindex="-1"
      >
        <div
          class="RadioPane-header-104"
        >
          <h6
            class="MuiTypography-root RadioPane-title-105 Typography-root-108 MuiTypography-h6"
            data-testid="typography"
          >
            Value 1
          </h6>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root RadioPane-checkedIcon-103"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
    <div
      class="RadioPane-btnContainer-96"
    >
      <div
        class="RadioPane-iconBtn-97"
      />
    </div>
  </div>
</div>
`;

exports[`RadioPane component renders without children 1`] = `
<div>
  <div
    class="RadioPane-radioPaneContainer-2"
  >
    <label
      class="RadioPane-root-1"
    >
      <input
        class="RadioPane-input-9"
        name="f1"
        type="radio"
        value="v1"
      />
      <div
        aria-disabled="false"
        class="MuiButtonBase-root RadioPane-pane-10"
        role="button"
        tabindex="-1"
      >
        <div
          class="RadioPane-header-12"
        >
          <h6
            class="MuiTypography-root RadioPane-title-13 Typography-root-16 MuiTypography-h6"
            data-testid="typography"
          >
            Value 1
          </h6>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root RadioPane-checkedIcon-11"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
  </div>
</div>
`;
